RESOLVED FIXED188153
Fix incorrect guards around a method declaration in PageClient.h
https://bugs.webkit.org/show_bug.cgi?id=188153
Summary Fix incorrect guards around a method declaration in PageClient.h
Wenson Hsieh
Reported 2018-07-29 18:35:30 PDT
This breaks the iOSMac build.
Attachments
Patch (2.27 KB, patch)
2018-07-29 18:57 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2018-07-29 18:57:29 PDT
Radar WebKit Bug Importer
Comment 2 2018-07-29 18:58:24 PDT
WebKit Commit Bot
Comment 3 2018-07-29 22:39:55 PDT
Comment on attachment 346048 [details] Patch Clearing flags on attachment: 346048 Committed r234350: <https://trac.webkit.org/changeset/234350>
WebKit Commit Bot
Comment 4 2018-07-29 22:39:57 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.