Fix incorrect guards around a method declaration in PageClient.h https://bugs.webkit.org/show_bug.cgi?id=188153

Reviewed by Tim Horton.

`WebCore::DragItem` is forward declared under `ENABLE(DRAG_SUPPORT)`, but `startDrag` is declared under
`PLATFORM(COCOA)`. If `ENABLE(DRAG_SUPPORT)` is off but `PLATFORM(COCOA)` is on, the build breaks.

We fix this by moving `startDrag` under `ENABLE(DRAG_SUPPORT)`.

* UIProcess/PageClient.h:
(WebKit::PageClient::startDrag):


Canonical link: https://commits.webkit.org/203269@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234350 268f45cc-cd09-0410-ab3c-d52691b4dbfc